--- a/public/output.css
+++ b/public/output.css
@@ -551,6 +551,10 @@ video {
   left: 0.75rem;
 }
 
+.left-\[-20px\] {
+  left: -20px;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -563,30 +567,6 @@ video {
   top: 0.75rem;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[-10px\] {
-  left: -10px;
-}
-
-.left-\[-20px\] {
-  left: -20px;
-}
-
-.top-\[\] {
-  top: ;
-}
-
 .top-\[-10px\] {
   top: -10px;
 }
@@ -595,40 +575,20 @@ video {
   z-index: 10;
 }
 
-.z-\[80\] {
-  z-index: 80;
-}
-
-.z-0 {
-  z-index: 0;
-}
-
-.z-\[\] {
-  z-index: ;
-}
-
-.z-\[-1\] {
-  z-index: -1;
-}
-
-.z-\[1\] {
-  z-index: 1;
-}
-
 .z-20 {
   z-index: 20;
+}
+
+.z-\[80\] {
+  z-index: 80;
 }
 
 .m-auto {
   margin: auto;
 }
 
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .flex {
@@ -643,6 +603,10 @@ video {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-\[12rem\] {
   height: 12rem;
 }
@@ -651,32 +615,16 @@ video {
   height: 192px;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[350px\] {
-  height: 350px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[200px\] {
-  height: 200px;
-}
-
 .h-\[250px\] {
   height: 250px;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-full {
+  height: 100%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-16 {
@@ -697,10 +645,6 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
 .max-w-\[1200px\] {
   max-width: 1200px;
 }
@@ -709,28 +653,16 @@ video {
   max-width: 400px;
 }
 
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[800px\] {
-  max-width: 800px;
-}
-
-.max-w-\[1000px\] {
-  max-width: 1000px;
-}
-
 .max-w-\[700px\] {
   max-width: 700px;
 }
 
-.flex-auto {
-  flex: 1 1 auto;
+.max-w-\[\] {
+  max-width: ;
 }
 
-.flex-grow {
-  flex-grow: 1;
+.flex-auto {
+  flex: 1 1 auto;
 }
 
 .basis-\[20\%\] {
@@ -757,6 +689,10 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-col-reverse {
   flex-direction: column-reverse;
 }
@@ -765,16 +701,8 @@ video {
   flex-wrap: wrap;
 }
 
-.place-items-start {
-  place-items: start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -789,20 +717,12 @@ video {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.justify-items-start {
-  justify-items: start;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-20 {
+  gap: 5rem;
 }
 
 .gap-3 {
@@ -817,10 +737,6 @@ video {
   gap: 1.5rem;
 }
 
-.gap-20 {
-  gap: 5rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
@@ -829,40 +745,22 @@ video {
   row-gap: 1rem;
 }
 
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.place-self-start {
-  place-self: start;
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
-.place-self-center {
-  place-self: center;
-}
-
-.self-start {
-  align-self: flex-start;
-}
-
-.self-center {
-  align-self: center;
-}
-
-.justify-self-start {
-  justify-self: start;
-}
-
-.justify-self-center {
-  justify-self: center;
+.space-y-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
 .rounded {
@@ -877,53 +775,17 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-\[\] {
-  border-radius: ;
-}
-
-.rounded-\[3rem\] {
-  border-radius: 3rem;
-}
-
 .rounded-e-lg {
   border-start-end-radius: 0.5rem;
   border-end-end-radius: 0.5rem;
 }
 
-.rounded-ss-lg {
-  border-start-start-radius: 0.5rem;
-}
-
-.rounded-tl-lg {
-  border-top-left-radius: 0.5rem;
-}
-
-.rounded-tl-3xl {
-  border-top-left-radius: 1.5rem;
-}
-
-.rounded-tr-3xl {
-  border-top-right-radius: 1.5rem;
-}
-
-.rounded-bl-3xl {
-  border-bottom-left-radius: 1.5rem;
-}
-
-.rounded-tr-\[\] {
-  border-top-right-radius: ;
+.rounded-bl-\[3rem\] {
+  border-bottom-left-radius: 3rem;
 }
 
 .rounded-tr-\[3rem\] {
   border-top-right-radius: 3rem;
-}
-
-.rounded-bl-\[\] {
-  border-bottom-left-radius: ;
-}
-
-.rounded-bl-\[3rem\] {
-  border-bottom-left-radius: 3rem;
 }
 
 .border {
@@ -948,6 +810,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -958,35 +825,9 @@ video {
   background-color: rgb(20 56 31 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f2f2f2\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[f\] {
-  background-color: f;
-}
-
-.bg-\[\#22222\] {
-  background-color: #22222;
-}
-
 .bg-\[\#222222\] {
   --tw-bg-opacity: 1;
   background-color: rgb(34 34 34 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#\] {
-  background-color: #;
 }
 
 .bg-\[\#444444\] {
@@ -994,8 +835,24 @@ video {
   background-color: rgb(68 68 68 / var(--tw-bg-opacity));
 }
 
-.object-cover {
-  object-fit: cover;
+.bg-\[\#f2f2f2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .px-3 {
@@ -1023,6 +880,11 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1038,19 +900,13 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .pb-2 {
@@ -1059,6 +915,10 @@ video {
 
 .pb-3 {
   padding-bottom: 0.75rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pb-8 {
@@ -1093,6 +953,10 @@ video {
   padding-top: 5rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -1105,36 +969,16 @@ video {
   padding-top: 1.75rem;
 }
 
-.pt-\[7\.3rem\] {
-  padding-top: 7.3rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
 
-.pb-6 {
-  padding-bottom: 1.5rem;
+.pt-\[7\.3rem\] {
+  padding-top: 7.3rem;
 }
 
 .text-center {
   text-align: center;
-}
-
-.text-start {
-  text-align: start;
 }
 
 .text-end {
@@ -1167,6 +1011,10 @@ video {
   font-size: 1.1rem;
 }
 
+.text-\[1\.2rem\] {
+  font-size: 1.2rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1177,13 +1025,8 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-\[1\.2rem\] {
-  font-size: 1.2rem;
+.font-bold {
+  font-weight: 700;
 }
 
 .font-light {
@@ -1208,17 +1051,14 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[0\.\] {
-  color: 0.;
 }
 
 .shadow-2xl {
@@ -1311,6 +1151,10 @@ input[type="search"]::-webkit-search-cancel-button {
     order: 2;
   }
 
+  .md\:m-0 {
+    margin: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1323,36 +1167,24 @@ input[type="search"]::-webkit-search-cancel-button {
     display: grid;
   }
 
-  .md\:h-\[\] {
-    height: ;
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-\[300px\] {
     height: 300px;
   }
 
-  .md\:h-\[350px\] {
-    height: 350px;
+  .md\:w-\[500px\] {
+    width: 500px;
   }
 
   .md\:w-full {
     width: 100%;
   }
 
-  .md\:w-\[\] {
-    width: ;
-  }
-
-  .md\:w-\[500px\] {
-    width: 500px;
-  }
-
   .md\:max-w-\[700px\] {
     max-width: 700px;
-  }
-
-  .md\:max-w-\[\] {
-    max-width: ;
   }
 
   .md\:grid-cols-2 {
@@ -1415,11 +1247,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:gap-6 {
     gap: 1.5rem;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .lg\:pt-\[4\.3rem\] {
