--- a/public/output.css
+++ b/public/output.css
@@ -591,6 +591,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -659,6 +663,14 @@ video {
 
 .max-w-\[\] {
   max-width: ;
+}
+
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+
+.max-w-\[730px\] {
+  max-width: 730px;
 }
 
 .flex-auto {
@@ -741,6 +753,14 @@ video {
   gap: 2rem;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-y-4 {
   row-gap: 1rem;
 }
@@ -800,6 +820,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-\[\#14381f\] {
   --tw-border-opacity: 1;
   border-color: rgb(20 56 31 / var(--tw-border-opacity));
@@ -818,6 +842,16 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .bg-\[\#14381f\] {
@@ -853,6 +887,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .px-3 {
@@ -903,6 +942,11 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .pb-10 {
@@ -977,6 +1021,10 @@ video {
   padding-top: 7.3rem;
 }
 
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1025,6 +1073,14 @@ video {
   line-height: 1.75rem;
 }
 
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.text-\[3rem\] {
+  font-size: 3rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1059,6 +1115,23 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[1\.\] {
+  color: 1.;
+}
+
+.text-\[0\.\] {
+  color: 0.;
 }
 
 .shadow-2xl {
@@ -1187,6 +1260,14 @@ input[type="search"]::-webkit-search-cancel-button {
     max-width: 700px;
   }
 
+  .md\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .md\:max-w-\[700p\] {
+    max-width: 700p;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1207,6 +1288,11 @@ input[type="search"]::-webkit-search-cancel-button {
     gap: 1rem;
   }
 
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .md\:pt-0 {
     padding-top: 0px;
   }
@@ -1221,6 +1307,14 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .md\:text-start {
     text-align: start;
+  }
+
+  .md\:text-\[2rem\] {
+    font-size: 2rem;
+  }
+
+  .md\:text-\[\] {
+    color: ;
   }
 }
 
@@ -1241,6 +1335,14 @@ input[type="search"]::-webkit-search-cancel-button {
     max-width: 1200px;
   }
 
+  .lg\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .lg\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1251,6 +1353,22 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:pt-\[4\.3rem\] {
     padding-top: 4.3rem;
+  }
+
+  .lg\:text-\[1\.2rem\] {
+    font-size: 1.2rem;
+  }
+
+  .lg\:text-\[\] {
+    color: ;
+  }
+
+  .lg\:text-\[1\.\] {
+    color: 1.;
+  }
+
+  .lg\:text-\[1\.2\] {
+    color: 1.2;
   }
 }
 
@@ -1263,6 +1381,28 @@ input[type="search"]::-webkit-search-cancel-button {
 @media (min-width: 1440px) {
   .sl\:max-w-\[1200px\] {
     max-width: 1200px;
+  }
+
+  .sl\:max-w-fit {
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+  }
+
+  .sl\:max-w-\[\] {
+    max-width: ;
+  }
+
+  .sl\:max-w-\[700px\] {
+    max-width: 700px;
+  }
+
+  .sl\:max-w-\[100px\] {
+    max-width: 100px;
+  }
+
+  .sl\:max-w-\[1000px\] {
+    max-width: 1000px;
   }
 
   .sl\:px-0 {
