--- a/public/output.css
+++ b/public/output.css
@@ -587,10 +587,6 @@ video {
   margin: auto;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -653,20 +649,16 @@ video {
   max-width: 1200px;
 }
 
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+
 .max-w-\[400px\] {
   max-width: 400px;
 }
 
 .max-w-\[700px\] {
   max-width: 700px;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[300px\] {
-  max-width: 300px;
 }
 
 .max-w-\[730px\] {
@@ -683,6 +675,10 @@ video {
 
 .basis-\[70\%\] {
   flex-basis: 70%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .list-disc {
@@ -749,16 +745,12 @@ video {
   gap: 1.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-7 {
   gap: 1.75rem;
 }
 
-.gap-1 {
-  gap: 0.25rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-y-4 {
@@ -820,15 +812,6 @@ video {
   border-top-width: 1px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.border-\[\#14381f\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(20 56 31 / var(--tw-border-opacity));
-}
-
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -839,19 +822,14 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .bg-\[\#14381f\] {
@@ -884,14 +862,29 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .px-3 {
@@ -902,6 +895,11 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -944,11 +942,6 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -963,6 +956,10 @@ video {
 
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .pb-8 {
@@ -1021,10 +1018,6 @@ video {
   padding-top: 7.3rem;
 }
 
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -1063,6 +1056,14 @@ video {
   font-size: 1.2rem;
 }
 
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
+}
+
+.text-\[3rem\] {
+  font-size: 3rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1071,14 +1072,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[1\.5rem\] {
-  font-size: 1.5rem;
-}
-
-.text-\[3rem\] {
-  font-size: 3rem;
 }
 
 .font-bold {
@@ -1102,14 +1095,14 @@ video {
   color: rgb(20 56 31 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1117,21 +1110,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-black {
+.text-gray-700 {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[1\.\] {
-  color: 1.;
-}
-
-.text-\[0\.\] {
-  color: 0.;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -1162,8 +1143,8 @@ div#ul{
 }
 
 input[type="search"]::-webkit-search-cancel-button {
-  font-size: 40px;
-  color: black !important;
+  font-size: 20px;
+  color: aqua;
   cursor: pointer;
 }
 
@@ -1187,14 +1168,14 @@ input[type="search"]::-webkit-search-cancel-button {
   line-height: 1.75rem;
 }
 
-.placeholder\:text-\[\#14381f\]::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(20 56 31 / var(--tw-text-opacity));
-}
-
 .placeholder\:text-black::placeholder {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-white::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:bg-black:hover {
@@ -1260,14 +1241,6 @@ input[type="search"]::-webkit-search-cancel-button {
     max-width: 700px;
   }
 
-  .md\:max-w-\[\] {
-    max-width: ;
-  }
-
-  .md\:max-w-\[700p\] {
-    max-width: 700p;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1312,10 +1285,6 @@ input[type="search"]::-webkit-search-cancel-button {
   .md\:text-\[2rem\] {
     font-size: 2rem;
   }
-
-  .md\:text-\[\] {
-    color: ;
-  }
 }
 
 @media (min-width: 1024px) {
@@ -1333,10 +1302,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
   .lg\:max-w-\[1200px\] {
     max-width: 1200px;
-  }
-
-  .lg\:max-w-\[\] {
-    max-width: ;
   }
 
   .lg\:max-w-\[400px\] {
@@ -1358,18 +1323,6 @@ input[type="search"]::-webkit-search-cancel-button {
   .lg\:text-\[1\.2rem\] {
     font-size: 1.2rem;
   }
-
-  .lg\:text-\[\] {
-    color: ;
-  }
-
-  .lg\:text-\[1\.\] {
-    color: 1.;
-  }
-
-  .lg\:text-\[1\.2\] {
-    color: 1.2;
-  }
 }
 
 @media (min-width: 1280px) {
@@ -1381,28 +1334,6 @@ input[type="search"]::-webkit-search-cancel-button {
 @media (min-width: 1440px) {
   .sl\:max-w-\[1200px\] {
     max-width: 1200px;
-  }
-
-  .sl\:max-w-fit {
-    max-width: -webkit-fit-content;
-    max-width: -moz-fit-content;
-    max-width: fit-content;
-  }
-
-  .sl\:max-w-\[\] {
-    max-width: ;
-  }
-
-  .sl\:max-w-\[700px\] {
-    max-width: 700px;
-  }
-
-  .sl\:max-w-\[100px\] {
-    max-width: 100px;
-  }
-
-  .sl\:max-w-\[1000px\] {
-    max-width: 1000px;
   }
 
   .sl\:px-0 {
