--- a/src/input.css
+++ b/src/input.css
@@ -16,8 +16,8 @@ div#ul{
 }
 
 input[type="search"]::-webkit-search-cancel-button {
-   font-size: 40px;
-color: black !important;
+   font-size: 20px;
+  color: aqua;
 cursor: pointer;
 }
 
