--- a/public/output.css
+++ b/public/output.css
@@ -575,16 +575,20 @@ video {
   top: -10px;
 }
 
+.top-\[50\%\] {
+  top: 50%;
+}
+
 .top-\[\] {
   top: ;
 }
 
-.top-\[50\] {
-  top: 50;
+.top-\[20\] {
+  top: 20;
 }
 
-.top-\[50\%\] {
-  top: 50%;
+.top-\[20\%\] {
+  top: 20%;
 }
 
 .z-10 {
@@ -601,6 +605,11 @@ video {
 
 .m-auto {
   margin: auto;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .mb-2 {
@@ -671,6 +680,22 @@ video {
   height: 100vh;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[100\] {
+  height: 100;
+}
+
+.h-\[100rem\] {
+  height: 100rem;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -715,14 +740,6 @@ video {
 
 .max-w-\[730px\] {
   max-width: 730px;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[400p\] {
-  max-width: 400p;
 }
 
 .flex-auto {
@@ -777,10 +794,6 @@ video {
   flex-wrap: wrap;
 }
 
-.place-items-center {
-  place-items: center;
-}
-
 .items-center {
   align-items: center;
 }
@@ -795,10 +808,6 @@ video {
 
 .justify-around {
   justify-content: space-around;
-}
-
-.justify-items-center {
-  justify-items: center;
 }
 
 .gap-2 {
@@ -827,6 +836,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-y-4 {
@@ -961,6 +974,11 @@ video {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -1057,6 +1075,10 @@ video {
   padding-left: 2.5rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
 }
@@ -1119,10 +1141,6 @@ video {
 
 .pt-\[7\.3rem\] {
   padding-top: 7.3rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
 }
 
 .text-center {
@@ -1214,6 +1232,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1227,30 +1250,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1321,19 +1320,14 @@ input[type="search"]::-webkit-search-cancel-button {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-white::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-gray-700::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
 .placeholder\:text-gray-200::placeholder {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-white::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:bg-black:hover {
@@ -1344,6 +1338,21 @@ input[type="search"]::-webkit-search-cancel-button {
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1362,6 +1371,14 @@ input[type="search"]::-webkit-search-cancel-button {
 @media (min-width: 768px) {
   .md\:relative {
     position: relative;
+  }
+
+  .md\:top-\[20\%\] {
+    top: 20%;
+  }
+
+  .md\:top-\[15\%\] {
+    top: 15%;
   }
 
   .md\:order-1 {
@@ -1396,12 +1413,24 @@ input[type="search"]::-webkit-search-cancel-button {
     height: 300px;
   }
 
+  .md\:h-fit {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
   .md\:w-\[500px\] {
     width: 500px;
   }
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:w-fit {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .md\:max-w-\[600px\] {
@@ -1438,9 +1467,23 @@ input[type="search"]::-webkit-search-cancel-button {
     gap: 1rem;
   }
 
+  .md\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
   .md\:pl-7 {
@@ -1473,12 +1516,30 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 @media (min-width: 1024px) {
+  .lg\:top-\[\] {
+    top: ;
+  }
+
+  .lg\:top-\[20\] {
+    top: 20;
+  }
+
+  .lg\:top-\[20\%\] {
+    top: 20%;
+  }
+
   .lg\:flex {
     display: flex;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-fit {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .lg\:max-w-\[1000px\] {
